--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,6 +4,9 @@
   "description": "Terminal-based WYSIWYG markdown renderer using OpenTUI and Bun",
   "type": "module",
   "main": "dist/main.js",
+  "bin": {
+    "mark-preview": "./dist/main.js"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
