feat: use MarkdownRenderable, inspired from https://github.com/anomalyco/opentui/blob/main/packages/core/src/examples/markdown-demo.ts

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "start": "bun dist/main.js",
     "test": "bun test",
     "test:opentui": "./test-opentui.sh",
     "lint": "eslint src/**/*.ts",
